kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-demo
  template:
    metadata:
      labels:
        app: devops-demo
    spec:
      containers:
      - name: devops-demo
        image: gcr.io/elated-bus-460108-d0/nginx-custom-ak
        ports:
        - containerPort: 3000
