kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-service
spec:
  type: NodePort
  selector:
    app: devops-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
