kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-demo-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-demo-service
            port:
              number: 80
